<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myce.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.myce.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_directions"
        android:name="com.example.myce.ui.directions.DirectionsFragment"
        android:label="@string/title_directions"
        tools:layout="@layout/fragment_directions" />

    <fragment
        android:id="@+id/navigation_myplace"
        android:name="com.example.myce.ui.myplace.MyplaceFragment"
        android:label="@string/title_myplace"
        tools:layout="@layout/fragment_myplace" />

    <fragment
        android:id="@+id/navigation_myProfile"
        android:name="com.example.myce.ui.myplace.MyplaceFragment"
        android:label="@string/title_myprofile"
        tools:layout="@layout/fragment_myprofile" />
</navigation>